# cloq

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  contributions_log.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
examples/: basic_usage.py
examples/config_examples/: .cloq.yml
src/cloq/: __init__.py  __main__.py
src/cloq/cli/: __init__.py  main.py  output.py
src/cloq/config/: __init__.py  loader.py  schema.py
src/cloq/detection/: __init__.py  base.py  network.py  pii.py  pipeline.py  secrets.py
src/cloq/logging/: __init__.py  audit.py
src/cloq/proxy/: __init__.py  cache.py  middleware.py  providers.py  server.py  streaming.py
src/cloq/proxy/static/: index.html
src/cloq/sanitizer/: __init__.py  engine.py  session_store.py
tests/: conftest.py
tests/test_detection/: test_network.py  test_pii.py  test_pipeline.py  test_secrets.py
tests/test_proxy/: test_cache.py
tests/test_sanitizer/: test_engine.py  test_session.py
vscode-ext/: README.md  package-lock.json  package.json  tsconfig.json
vscode-ext/src/: extension.ts
