[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloq"
version = "0.1.1"
description = "Local-first context sanitizer — cloak your secrets before they reach the cloud"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Cloq Contributors" },
]
keywords = [
    "llm",
    "security",
    "proxy",
    "pii",
    "secrets",
    "sanitizer",
    "privacy",
    "enterprise",
    "ai",
    "openai",
    "anthropic",
    "claude",
    "gpt",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: Proxy Servers",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "uvicorn[standard]>=0.29.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
pii = [
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "spacy>=3.7.0",
]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "types-PyYAML>=6.0.0",
]
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
]
all = ["cloq[pii,dev,docs]"]

[project.scripts]
cloq = "cloq.cli.main:app"
cloq-cli = "cloq.cli.main:app"

[project.urls]
Homepage = "https://github.com/CodeBase-X1/cloq"
Documentation = "https://github.com/CodeBase-X1/cloq#readme"
Repository = "https://github.com/CodeBase-X1/cloq"
Issues = "https://github.com/CodeBase-X1/cloq/issues"
Changelog = "https://github.com/CodeBase-X1/cloq/blob/main/CHANGELOG.md"

# ── Hatch ────────────────────────────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["src/cloq"]

[tool.hatch.build.targets.sdist]
include = ["src/cloq", "LICENSE", "README.md"]

# ── Ruff ─────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["cloq"]

# ── Pytest ───────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--cov=cloq",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
]

# ── Mypy ─────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["presidio_analyzer.*", "presidio_anonymizer.*"]
ignore_missing_imports = true

# ── Coverage ─────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["cloq"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
